# client

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile.sdk  Dockerfile.sdk.manylinux  README.md  conanfile.py  output.txt  pyproject.toml
src/c++/: CMakeLists.txt
src/c++/examples/: CMakeLists.txt  ensemble_image_client.cc  image_client.cc  reuse_infer_objects_client.cc  shm_utils.cc  shm_utils.h  simple_grpc_async_infer_client.cc  simple_grpc_cudashm_client.cc  simple_grpc_custom_args_client.cc  simple_grpc_custom_repeat.cc  simple_grpc_health_metadata.cc  simple_grpc_infer_client.cc  simple_grpc_keepalive_client.cc  simple_grpc_model_control.cc  simple_grpc_sequence_stream_infer_client.cc  simple_grpc_sequence_sync_infer_client.cc  simple_grpc_shm_client.cc  simple_grpc_string_infer_client.cc  simple_grpc_trace_client.cc  simple_http_async_infer_client.cc  simple_http_cudashm_client.cc  simple_http_health_metadata.cc  simple_http_infer_client.cc  simple_http_model_control.cc  simple_http_sequence_sync_infer_client.cc  simple_http_shm_client.cc  simple_http_string_infer_client.cc  simple_http_trace_client.cc
src/c++/perf_analyzer/: CMakeLists.txt  README.md  base_queue_ctx_id_tracker.h  command_line_parser.cc  command_line_parser.h  concurrency_ctx_id_tracker.h  concurrency_manager.cc  concurrency_manager.h  concurrency_worker.cc  concurrency_worker.h  constants.h  ctx_id_tracker.h  ctx_id_tracker_factory.h  custom_load_manager.cc  custom_load_manager.h  data_loader.cc  data_loader.h  doctest.h  error.cc  error.h  ictx_id_tracker.h  idle_timer.h  iinfer_data_manager.h  infer_context.cc  infer_context.h  infer_data.h  infer_data_manager.cc  infer_data_manager.h  infer_data_manager_base.cc  infer_data_manager_base.h  infer_data_manager_factory.h  infer_data_manager_shm.cc  infer_data_manager_shm.h  infer_manager.cc  infer_manager.h  inference_profiler.cc  inference_profiler.h  ischeduler.h  iworker.h  load_manager.cc  (+87 more)
src/c++/perf_analyzer/c_api_helpers/: CMakeLists.txt  c_api_infer_results.h  common.h  shared_library.cc  shared_library.h  triton_loader.cc  triton_loader.h
src/c++/perf_analyzer/client_backend/: CMakeLists.txt  client_backend.cc  client_backend.h  mock_client_backend.h
src/c++/perf_analyzer/docs/: README.md  benchmarking.md  cli.md  data_guide.md  inference_load_modes.md  input_data.md  install.md  llm.md  measurements.md  measurements_metrics.md  quick_start.md  request_sending_modes.md
src/c++/perf_analyzer/examples/: coupled_output_file.json  decoupled_output_file.json  known_error_file.json
src/c++/perf_analyzer/genai-pa/: README.md  genaipa_exceptions.py  main.py  pyproject.toml
src/c++/perf_analyzer/genai-perf/: README.md  llm_inputs.json  profile_export_genai_perf.csv  pyproject.toml  updated_cmd
src/c++/perf_analyzer/genaipa/: README.md  pyproject.toml
src/c++/perf_analyzer/src/: CMakeLists.txt  base_queue_ctx_id_tracker.h  command_line_parser.cc  command_line_parser.h  custom_load_manager.cc  custom_load_manager.h  data_loader.h  doctest.h  fifo_ctx_id_tracker.h  idle_timer.h  iinfer_data_manager.h  infer_context.cc  infer_data.h  infer_data_manager.h  infer_data_manager_factory.h  infer_data_manager_shm.cc  infer_data_manager_shm.h  ischeduler.h  iworker.h  load_manager.cc  load_manager.h  load_worker.cc  load_worker.h  main.cc  metrics.h  metrics_manager.cc  metrics_manager.h  mock_concurrency_worker.h  mock_data_loader.h  mock_infer_data_manager.h  mock_profile_data_collector.h  mock_sequence_manager.h  mpi_utils.cc  perf_analyzer.cc  perf_analyzer.h  perf_analyzer_exception.h  perf_analyzer_unit_tests.cc  perf_utils.cc  perf_utils.h  periodic_concurrency_manager.h  (+23 more)
src/c++/perf_analyzer/tests/: test_analyzer.py  test_bls_report_manager.py  test_cli.py  test_config.py  test_constraint_manager.py  test_coordinate.py  test_coordinate_data.py  test_cpu_monitor.py  test_dcgm_monitor.py  test_ensemble_report_manager.py  test_file_writer.py  test_html_report.py  test_logger.py  test_model_config.py  test_model_config_generator.py  test_model_config_measurement.py  test_model_constraints.py  test_model_manager.py  test_model_variant_name_manager.py  test_neighborhood.py  test_parameter_search.py  test_pdf_report.py  test_perf_analyzer.py  test_perf_analyzer_config_generator.py  test_plot.py  test_plot_manager.py  test_quick_run_config_generator.py  test_record_aggregator.py  test_record_types.py  test_remote_monitor.py  test_report_manager.py  (+19 more)
src/c++/tests/: CMakeLists.txt  cc_client_test.cc  client_input_test.cc  client_timeout_test.cc  memory_leak_test.cc
src/java/: CMakeLists.txt  README.md  pom.xml
src/python/: CMakeLists.txt
src/python/examples/: CMakeLists.txt  ensemble_image_client.py  grpc_client.py  grpc_explicit_byte_content_client.py  grpc_explicit_int8_content_client.py  grpc_explicit_int_content_client.py  grpc_image_client.py  image_client.py  memory_growth_test.py  reuse_infer_objects_client.py  simple_grpc_aio_cudashm_client.py  simple_grpc_aio_custom_args_client.py  simple_grpc_aio_health_metadata.py  simple_grpc_aio_infer_client.py  simple_grpc_aio_keepalive_client.py  simple_grpc_aio_model_control.py  simple_grpc_aio_sequence_stream_infer_client.py  simple_grpc_aio_sequence_sync_infer_client.py  simple_grpc_aio_shm_client.py  simple_grpc_aio_shm_string_client.py  simple_grpc_aio_string_infer_client.py  simple_grpc_async_infer_client.py  simple_grpc_cudashm_client.py  simple_grpc_custom_args_client.py  simple_grpc_custom_repeat.py  simple_grpc_health_metadata.py  simple_grpc_infer_client.py  simple_grpc_keepalive_client.py  simple_grpc_model_control.py  simple_grpc_sequence_stream_infer_client.py  simple_grpc_sequence_sync_infer_client.py  simple_grpc_shm_client.py  simple_grpc_shm_string_client.py  simple_grpc_string_infer_client.py  simple_http_aio_cudashm_client.py  simple_http_aio_health_metadata.py  simple_http_aio_infer_client.py  simple_http_aio_model_control.py  simple_http_aio_sequence_sync_infer_client.py  simple_http_aio_shm_client.py  (+12 more)
src/rust/triton-client/: Cargo.toml  README.md  build.rs
(+351 files in other folders)
